--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,21 @@
-spring:
-  data:
-    mongodb:
-        uri: mongodb+srv://renimo:employees@employees.ubjilos.mongodb.net/?retryWrites=true&w=majority
-        database: Employees
-#spring.data.mongodb.uri=mongodb://localhost:35729/Employees
+##spring:
+##  data:
+##    mongodb:
+##        uri: mongodb+srv://renimo:employees@employees.ubjilos.mongodb.net/?retryWrites=true&w=majority
+##        database: Employees
+##spring.data.mongodb.uri=mongodb://localhost:27017/Employees
+#
+spring.data.mongodb.uri=mongodb+srv://renimo:employees@employees.ubjilos.mongodb.net/Employees?retryWrites=true&w=majority
+#
+#
+##spring.data.mongodb.uri=mongodb+srv://renimo:renimoTest@projecttest.9dokypx.mongodb.net/projectTest?retryWrites=true&w=majority
+#
+#
+##spring.data.mongodb.host=localhost
+##spring.data.mongodb.port=27017
+##spring.data.mongodb.database=Employees
+
+
+
+#spring.data.mongodb.uri=mongodb+srv://renimo:renimoTest@projecttest.9dokypx.mongodb.net/projectTest?retryWrites=true&w=majority
+#server.port=9090
